# saas-cat-pat-desktop

./: .env.example  .gitignore  Dockerfile.dev  PRODUCTION_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  podman-compose.yml  qa-manual-checklist.md  release-checklist.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
db/migrations/: 0001_init.sql
docs/: architecture.md  github_issues.md  roadmap.md  specification.md
scripts/: create_github_issues.sh
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: achievement.rs  ai.rs  cat.rs  memory.rs  mod.rs  pomodoro.rs  rare_event.rs  reminder.rs  settings.rs  story.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/integrations/: ai_provider.rs  mod.rs  notifier.rs  window_watcher.rs
src-tauri/src/services/: achievement_service.rs  analytics_service.rs  memory_service.rs  mod.rs  mood_service.rs  personality_service.rs  pomodoro_service.rs  rare_event_service.rs  reminder_service.rs  story_service.rs  xp_service.rs
src/__tests__/: routes.test.ts
src/components/: HubApp.tsx
src/engine/: CatEngine.ts  dialogue.ts  eyeFollow.test.ts  eyeFollow.ts
src/hooks/: useCat.ts  useTauriEvents.ts
src/lib/: tauri.ts  xp.ts
src/state/: achievementStore.ts  catStore.ts  memoryVaultStore.ts  moodStore.ts  pomodoroStore.ts  reminderStore.ts  settingsStore.ts
src/styles/: global.css  theme.ts
src/types/: models.ts
(+13 files in other folders)
