[package]
name = "comnyang"
version = "2.0.0"
description = "Comnyang 2.0 — AI Productivity Companion"
authors = ["Comnyang Team"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "2"
dirs = "5"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

# active-win-pos-rs provides cross-platform foreground window detection
# (Windows/macOS/X11). No Wayland support — see integrations/window_watcher.rs
# NullWatcher fallback. Pinned here per architecture.md §7.
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
active-win-pos-rs = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "comnyang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "comnyang"
path = "src/main.rs"
